--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.1",
     "foundation-sites": "^6.7.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
+    "swiper": "^6.8.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
